tests/snapshots/run_wpt_conformance__onnx_relu_int32_4D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "relu.https.any.js",
    "relu int32 4D tensor",
    "onnx",
    "PASS",
)
